--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,6 @@ egui = "0.23.0"
 egui-winit = "0.23.0"
 glium = "0.33.0"
 image = "0.24.7"
+itertools = "0.12.0"
+nalgebra = "0.32.3"
 winit = "0.28.7"
