--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 egui = "0.23.0"
 egui-winit = "0.23.0"
 glium = "0.33.0"
+gltf = "1.4.0"
 image = "0.24.7"
 itertools = "0.12.0"
 nalgebra = "0.32.3"
