--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,9 @@ gltf = "1.4.0"
 image = "0.24.7"
 itertools = "0.12.0"
 nalgebra = "0.32.3"
+nalgebra-glm = "0.18.0"
 obj-rs = "0.7.1"
 winit = "0.28.7"
 rand = "0.8.5"
 uuid = { version = "1.0", features = ["v4"] }
+
