--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ winit = "0.28.7"
 rand = "0.8.5"
 uuid = { version = "1.0", features = ["v4"] }
 egui_glium = "0.23.0"
+serde_json = "1.0.108"
+serde = { version = "1.0.193", features = ["derive"] }
 
 [package.metadata.bundle]
 name = "Enigma 3D"
