--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "enigma"
-version = "0.2.4"
+version = "0.2.5"
 authors = ["Jeremias Meister <contact@cg-jm.com>"]
 edition = "2021"
 description = "A 3D Rendering Engine with a focus on simplicity and ease of use."
-# include = ["src/res/**/*"]
+build = "build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -28,4 +28,7 @@ serde = { version = "1.0.193", features = ["derive"] }
 [package.metadata.bundle]
 name = "Enigma 3D"
 identifier = "io.github.JeremiasMeister.enigma"
+
+[package.metadata.includedir]
+include = ["src/res/**/*"]
 
