--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,10 @@ uuid = { version = "1.0", features = ["v4"] }
 egui_glium = "0.23.0"
 serde_json = "1.0.108"
 serde = { version = "1.0.193", features = ["derive"] }
+rayon = "1.10.0"
+parking_lot = "0.12.1"
+once_cell = "1.18.0"
+lru = "0.12.3"
 
 [package.metadata.bundle]
 name = "Enigma 3D"
