--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,13 @@ description = "A 3D Rendering Engine with a focus on simplicity and ease of use.
 build = "build.rs"
 keywords = ["gamedev", "graphics"]
 
+exclude = [
+    "python/*",
+    "examples/*",
+    "src/res/models/*",
+    "src/res/texures/*",
+]
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
