--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,9 @@ keywords = ["gamedev", "graphics"]
 exclude = [
     "python/*",
     "examples/*",
-    "src/res/models/*",
-    "src/res/texures/*",
+    "src/res/models/chessboard/*",
+    "src/res/texures/chessboard/*",
+    "src/example_resources.rs"
 ]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
