--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,14 +9,18 @@ description = "A 3D Rendering Engine with a focus on simplicity and ease of use.
 build = "build.rs"
 keywords = ["gamedev", "graphics"]
 
-exclude = [
-    "python/*",
-    "examples/*",
-    "src/res/models/chessboard/*",
-    "src/res/texures/chessboard/*",
-    "src/example_resources.rs",
-    "app_state.json"
+include = [
+    "src/**/*.rs",
+    "!src/example_resources.rs",
+    "Cargo.toml",
+    "build.rs",
+    "README.md",
+    "src/res/models/skybox.glb",
+    "src/res/shader/**/*.glsl",
+    "src/res/textures/skybox.png",
+    "src/res/textures/icon.png"
 ]
+
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -56,10 +60,8 @@ features = ["publish"]
 [package.metadata.includedir]
 include = [
     "src/res/models/skybox.glb",
-    "src/res/models/suzanne.glb",
-    "src/res/shader/**/*",
+    "src/res/shader/**/*.glsl",
     "src/res/textures/skybox.png",
-    "src/res/textures/uv_checker.png",
     "src/res/textures/icon.png"
 ]
 
