--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ license = "Apache-2.0"
 repository = "https://github.com/JeremiasMeister/enigma-3d.git"
 description = "A 3D Rendering Engine with a focus on simplicity and ease of use. Far from feature complete and not recommended for production use."
 build = "build.rs"
-keywords = ["gamedev", "graphics"]
+keywords = ["gamedev", "graphics", "game-engine", "engine", "game"]
 
 include = [
     "src/**/*.rs",
