--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ parking_lot = "0.12.1"
 once_cell = "1.18.0"
 lru = "0.12.3"
 indexmap = "2.2.6"
+colored = "2.1.0"
 
 [package.metadata.bundle]
 name = "Enigma 3D"
