--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,7 @@ once_cell = "1.18.0"
 lru = "0.12.3"
 indexmap = "2.2.6"
 colored = "2.1.0"
+chrono = "0.4.38"
 
 [package.metadata.bundle]
 name = "Enigma 3D"
