--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,6 +55,11 @@ identifier = "io.github.JeremiasMeister.enigma"
 default = []
 examples = []
 
+# this does not work atm - TODO: fix the environment variables to set logging level and save logs
+[env]
+SAVE_LOG_FILES = "false"
+LOG_LEVEL = "Message" # can be "Message", "Warning", "Error" or "None"
+
 [package.metadata.docs.rs]
 features = ["default"]
 
