--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,3 +1,3 @@
 [env]
-SAVE_LOG_FILES = "true" # if set to "1" or "true", a log file will be created, if set to "0" or "false" logs will only be applied to the console
+SAVE_LOG_FILES = "false" # if set to "1" or "true", a log file will be created, if set to "0" or "false" logs will only be applied to the console
 LOG_LEVEL = "Message" # can be "Message", "Warning" "Error" or "None" -> blocks lower levels from logging
