--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ lru = "0.12.3"
 indexmap = "2.2.6"
 colored = "2.1.0"
 chrono = "0.4.38"
+rodio = "0.20.1"
 
 [package.metadata.bundle]
 name = "Enigma 3D"
